# Editup.dev

./: .gitignore  CLAUDE.md  editup-planning-v2.md  editup-planning-v3.2 (1).md  editup-review-v2.txt  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
ai-bridge/: edit-plan.ts  enriched-snapshot.ts  execute.ts  index.ts  orchestrator.ts  plan.ts  prompt.ts
injected/: agent.ts  overlay.ts  pseudo-preview.ts  snapshot-builder.ts  source-map-fetch.ts  source-map.ts  style-capture.ts
scripts/: build-injected.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  git.rs  history.rs  lib.rs  license.rs  main.rs  proxy.rs  rate_limit.rs  security.rs  updater.rs  ws.rs
src/components/: history-panel.tsx  license-gate.tsx  setup-screen.tsx  update-banner.tsx
src/hooks/: useAgentConnection.ts  useApplyFlow.ts  useLicense.ts  usePseudoState.ts  useResponsiveMode.ts  useSession.ts  useTargetOrigin.ts  useUpdater.ts
src/lib/: errors.ts  history-logger.ts  logger.ts  sanitize.ts  verify-flow.ts
src/types/: edit-plan.ts  execute.ts  index.ts  license.ts  snapshot.ts
tests/e2e/: e2e.combined-flow.test.ts  e2e.frameworks.test.ts  e2e.full-flow.test.ts  e2e.layers.test.ts  e2e.multi-edit.test.ts  e2e.preview.test.ts  e2e.reset.test.ts  e2e.responsive-editor.test.ts  e2e.revert.test.ts  e2e.toast-approval.test.ts
tests/helpers/: fixtures.ts  glob.ts  mock-adapter.ts
tests/security/: mcp-binding.test.ts  no-bind-zero.test.ts  no-source-leak.test.ts  security.license-storage.test.ts  security.no-external-requests.test.ts  security.prompt-no-leak.test.ts  security.proxy-isolation.test.ts  security.ws-binding.test.ts  security.ws-token.test.ts  spawn-safe.test.ts
tests/unit/: adapter.claude-code.test.ts  adapter.detection.test.ts  agent.brackets.test.ts  agent.capture.test.ts  agent.context.test.ts  agent.preview.test.ts  agent.reattach.test.ts  agent.rules.test.ts  agent.source-normalize.test.ts  agent.token.test.ts  bridge.conflict.test.ts  bridge.execute.test.ts  bridge.fallback.test.ts  bridge.no-dangerous.test.ts  bridge.plan-retry.test.ts  bridge.plan.test.ts  bridge.session.test.ts  bridge.spawn.test.ts  editor.ai-input.test.tsx  editor.code-box.test.ts  editor.layers.test.tsx  editor.panels.test.ts  editor.progress.test.ts  editor.responsive.test.ts  editplan.combined.test.ts  editplan.invalid.test.ts  editplan.normalize.test.ts  editplan.property-based.test.ts  editplan.refinement.test.ts  editplan.schema.test.ts  license.check.test.ts  license.encryption.test.ts  license.grace.test.ts  license.tester-limit.test.ts  mcp.server.test.ts  orchestrator.test.ts  prompt.combined.test.ts  prompt.framework.test.ts  prompt.multi-element.test.ts  (+24 more)
verification/: correction.ts  diff-audit.ts  index.ts  scope.ts  visual.ts
(+31 files in other folders)
