[package]
name = "editup"
version = "0.1.0"
description = "EditUp.dev — Visual CSS editor with AI integration"
authors = ["EditUp.dev"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "editup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "client", "client-legacy"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1.10", features = ["v4"] }
url = "2.5"
bytes = "1.7"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
machine-uid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
